--- a/packages/document/docs/zh/plugin/official-plugins/preview.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/preview.mdx
@@ -87,7 +87,24 @@ export default function App() {
 ```ts
 interface PreviewOptions {
   isMobile: boolean;
+  iframePosition: 'follow' | 'fixed';
 }
 ```
 
-你可以通过 `isMobile` 参数来决定移动端/PC 端的预览模式。
+### isMobile
+
+`isMobile` 参数用于指定预览模式是否为移动端模式，默认为 `false`。默认 PC 模式的展示效果如下：
+
+![](https://lf3-static.bytednsdoc.com/obj/eden-cn/uhbfnupenuhf/rspress/demo-preview-pc.jpeg)
+
+### iframePosition
+
+在移动端预览模式下时，你可以通过 `iframePosition` 参数来决定预览区 iframe 的位置，是跟随页面滚动(`follow` 模式)还是固定在页面中(`fixed` 模式)，默认为 `follow`。
+
+`follow` 模式效果如下：
+
+![](https://lf3-static.bytednsdoc.com/obj/eden-cn/uhbfnupenuhf/rspress/demo-preview-mobile-follow.png)
+
+`fix` 模式效果如下：
+
+![](https://lf3-static.bytednsdoc.com/obj/eden-cn/uhbfnupenuhf/rspress/demo-preview-mobile-fixed.png)
