feat: set default hide nav behavior as `never`

--- a/packages/document/docs/en/api/config/config-theme.mdx
+++ b/packages/document/docs/en/api/config/config-theme.mdx
@@ -449,9 +449,9 @@ export default defineConfig({
 ## hideNavbar
 
 - Type: `"always" | "auto" | "never"`
-- Default: `auto`
+- Default: `never`
 
-Control the behavior of the hidden navigation bar. By default, the navigation bar will automatically hide when the page scrolls down. You can set it to always to **hide the navigation bar at all times**, or set it to **never to always display the navigation bar**.
+Control the behavior of the hidden navigation bar. By default, the navigation bar will always display. You can set it to `auto` to **automatically hide when the page scrolls down**, or set it to `always` to hidden it all the time.
 
 For example:
 
